Wikt 0.20.0 (work in progress)
------------------------------------------------------------------------
  * dictionary: CheckTrans sections are not displayed in entries.
  * libwikt: Support for more languages added.
  * wikt: fixed invalid contents generation from headers. Header 
    Abbreviation in entry [[&c.]] is a link, and that was not handled
    properly. Affects Contents panel.
  * convdict23: Bugfix in evaluating templates uc: ucfirst: lc: lcfist:,
    fixes invalid trimming of result. Affects entry [[acaeciera]].
  * convdict34: Generates form-of/gloss entries statistics.


------------------------------------------------------------------------
Wikt 0.19.0 (released 2009-08-24)
------------------------------------------------------------------------
  * Source code was heavily refactored and simplified, which results 
    in significantly smaller source code line count.
  * Some parts of Wikt application were moved to separate CLI 
    programs. Dynamic shared library libwikt was created.
  * Memory usage of dictionary processing tools was decreased. 
    Several memory leaks were discovered and removed.
  * Unit tests were moved to separate applications outside of main 
    source code.
 
 Bugfixes
  * Tags <includeonly>, <onlyinclude>, and <noinclude> are detected 
    using regular expressions instead of fixed strings, 
    eg. old <includeonly>, new: <includeonly\s*>. Affects entry "apple".
  * Template evaluation fixed: {{Template:Appendix:Contents}} text 
    appeared in the entry [[Category:Appendices]]. Now it is handled 
    as {{Appendix:Contents}} in convdict23 pass because Appendix is 
    a valid namespace.
  
 New Features
  * Support of 2009-07-11 version of Wiktionary data.
  * Application can be installed in any subdirectory (/opt, /usr, ~) of 
    user's computer.
  * User interface:
    o The lookup panel receives focus when any appropriate key is 
      pressed in the application. This means that when you write a word 