@@ -71,9 +71,6 @@ void WebView::onLoadFinished(bool ok)
 {
   if (!ok) return;
 
-  QSettings settings;
-  //bool translationsFolded = settings.value("translationsFolded", true).toBool();
-
   QString sectionId;
   UrlUtils::toEntryName(url(), &sectionId);
   if (sectionId.length() > 0)
